cmake_minimum_required(VERSION 3.13)
set(NAME test)
set(SOURCE src/main.cpp )
project(${NAME} VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(/home/Beapoe/C++/Project/test/src)
add_library(NeuralNet STATIC IMPORTED)
set_target_properties(NeuralNet PROPERTIES IMPORTED_LOCATION /home/Beapoe/C++/Project/test/src/libNeuralNet.a)
add_executable(${NAME} ${SOURCE})
target_link_libraries(${NAME} PRIVATE NeuralNet)
